@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+         - Added columns and has_column to F::DC::ResultSource
          - Do not allow setting attributes to undef in F::DC::IO
          - Optimised coercions in F::DC::Constraints
          - Optimised F::DC::Storage::WithLanguage::_get_key_and_newest
